# segbot_simulator

./: .gitignore  README.md  stack.xml
segbot_gazebo/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
segbot_gazebo/Media/models/: bwi_test_world.dae  segbot_test_world.dae
segbot_gazebo/config/: multiple_segbots.rviz
segbot_gazebo/launch/: amcl_segbot.launch  bwi_test_world.launch  bwi_test_world_map_server.launch  ens32_debug.launch  ens32_world.launch  fake_localization_segbot.launch  full_segbot.launch  gmapping_segbot.launch  multiple_segbots.launch  segbot.launch  segbot_mobile_base.launch  segbot_navigation.launch  simulated_bwi_segbot.launch
segbot_gazebo/scripts/: fake_amcl
segbot_gazebo/worlds/: bwi_test_world.world  ens32.world  ens32.world.bak
segbot_gazebo_plugins/: .gitignore  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
segbot_gazebo_plugins/include/bwi_gazebo_plugins/: segbotdrive_plugin.h  segbotsimpledrive_plugin.h
segbot_gazebo_plugins/include/segbot_gazebo_plugins/: diff_drive_plugin.h  gazebo_model_controller.h  gazebo_ros_video.h  object_controller_plugin.h
segbot_gazebo_plugins/src/: diff_drive_plugin.cc  gazebo_model_controller.cc  gazebo_ros_model_controller.cpp  gazebo_ros_video.cc  object_controller_plugin.cc  segbotdrive_plugin.cc  segbotsimpledrive_plugin.cc
segbot_simulation_apps/: CHANGELOG.rst  CMakeLists.txt  package.xml
segbot_simulation_apps/include/segbot_simulation_apps/: door_handler.h
segbot_simulation_apps/launch/: door_handler.launch
segbot_simulation_apps/src/libsegbot_simulation_apps/: door_handler.cpp
segbot_simulation_apps/src/nodes/: door_handler.cpp
segbot_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
