<package>
  <name>segbot_gazebo</name>
  <version>0.1.0</version>
  <description>bwi_gazebo</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bwi_gazebo</url>
  <url type="repository">https://github.com/utexas-bwi/segbot_simulator.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_simulator/issues</url>

  <author>Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>segbot_bringup</build_depend> -->
  <!-- <build_depend>segbot_description</build_depend> -->
  <!-- <build_depend>gazebo</build_depend> -->
  <!-- <build_depend>segbot_gazebo_plugins</build_depend> -->
  <run_depend>segbot_bringup</run_depend>
  <run_depend>segbot_description</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>segbot_gazebo_plugins</run_depend>
  <!-- <test_depend>segbot_bringup</test_depend> -->
  <!-- <test_depend>segbot_description</test_depend> -->
  <!-- <test_depend>gazebo</test_depend> -->
  <!-- <test_depend>segbot_gazebo_plugins</test_depend> -->

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
