<package>
  <name>segbot_gazebo_plugins</name>
  <version>0.1.0</version>
  <description>bwi_gazebo_plugins</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bwi_gazebo_plugins</url>
  <url type="repository">https://github.com/utexas-bwi/segbot_simulator.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_simulator/issues</url>

  <author>Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>roscpp</build_depend> -->
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>message_generation</build_depend>
  <!-- <run_depend>roscpp</run_depend> -->
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>message_runtime</run_depend>
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>gazebo_ros</test_depend> -->
  <!-- <test_depend>gazebo_plugins</test_depend> -->

  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>

</package>
