<package>
  <name>segbot_simulator</name>
  <version>0.2.0</version>
  <description>
    ROS metapackage containing simulation components for the Segway
    RMP 50 based research robots at the University of Texas at Austin.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_simulator</url>
  <url type="repository">https://github.com/utexas-bwi/segbot_simulator.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_simulator/issues</url>

  <author>Maintained by Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>segbot_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
